fix z-index warning icon

--- a/grails-app/assets/stylesheets/app/styles.less
+++ b/grails-app/assets/stylesheets/app/styles.less
@@ -586,6 +586,7 @@ a[data-toggle="tab"] button {
   left: 30px;
   position: absolute;
   top: 20px;
+  z-index:1;
 }
 
 .invert {
